--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,7 +1,16 @@
-next-version: 1.1.0
-mode: ContinuousDelivery
 branches:
   auto-versioning:
-    regex: ^auto-versioning$
-    increment: Patch
-    tag: ""
+    mode: ContinuousDelivery
+    label: alpha
+    increment: Minor
+    prevent-increment:
+      when-current-commit-tagged: false
+    track-merge-target: true
+    track-merge-message: true
+    source-branches:
+      - develop
+    is-source-branch-for: []
+    tracks-release-branches: true
+    is-release-branch: false
+    is-main-branch: false
+    pre-release-weight: 0
