--- a/.github/workflows/auto-versioning.yaml
+++ b/.github/workflows/auto-versioning.yaml
@@ -31,54 +31,12 @@ jobs:
           echo "FullSemVer (env.fullSemVer)            : ${{ env.fullSemVer }}"
         name: Display GitVersion variables (without prefix)
 
-      - run: |
-          echo "FullSemVer (env.GitVersion_FullSemVer) : ${{ env.GitVersion_FullSemVer }}"
-        name: Display GitVersion variables (with prefix)
-
-      - run: |
-          echo "FullSemVer (steps.version_step.outputs.fullSemVer)            : ${{ steps.version_step.outputs.fullSemVer }}"
-        name: Display GitVersion outputs (step output without prefix)
-
-      - run: |
-          echo "FullSemVer (steps.version_step.outputs.GitVersion_FullSemVer) : ${{ steps.version_step.outputs.GitVersion_FullSemVer }}"
-        name: Display GitVersion outputs (step output with prefix)
-
-      - run: |
-          echo "FullSemVer (env.myvar_fullSemVer)            : ${{ env.myvar_fullSemVer }}"
-        name: Display mapped local env (outputs without prefix)
-        env:
-          myvar_fullSemVer: ${{ steps.version_step.outputs.fullSemVer }}
-
-      - run: |
-          echo "FullSemVer (env.myvar_GitVersion_FullSemVer) : ${{ env.myvar_GitVersion_FullSemVer }}"
-        name: Display mapped local env (outputs with prefix)
-        env:
-          myvar_GitVersion_FullSemVer: ${{ steps.version_step.outputs.GitVersion_FullSemVer }}
-
-      - run: |
-          echo "FullSemVer (env.myvar_fullSemVer)            : $env:myvar_fullSemVer"
-        name: Display mapped local env (pwsh - outputs without prefix)
-        shell: pwsh
-        env:
-          myvar_fullSemVer: ${{ steps.version_step.outputs.fullSemVer }}
-
-      - run: |
-          echo "FullSemVer (env.myvar_GitVersion_FullSemVer) : $env:myvar_GitVersion_FullSemVer"
-        name: Display mapped local env (pwsh - outputs with prefix)
-        shell: pwsh
-        env:
-          myvar_GitVersion_FullSemVer: ${{ steps.version_step.outputs.GitVersion_FullSemVer }}
-
-      - run: |
-          echo "FullSemVer (myvar_fullSemVer)            : $myvar_fullSemVer"
-        name: Display mapped local env (bash - outputs without prefix)
-        shell: bash
-        env:
-          myvar_fullSemVer: ${{ steps.version_step.outputs.fullSemVer }}
-
-      - run: |
-          echo "FullSemVer (myvar_GitVersion_FullSemVer) : $myvar_GitVersion_FullSemVer"
-        name: Display mapped local env (bash - outputs with prefix)
-        shell: bash
-        env:
-          myvar_GitVersion_FullSemVer: ${{ steps.version_step.outputs.GitVersion_FullSemVer }}
+      - name: Update package.json Version
+        run: |
+          # Print GitVersion output for debugging
+          echo "GitVersion JSON output: ${{ steps.version_step.outputs.output }}"
+          # Extract SemVer from GitVersion JSON output
+          VERSION=$(echo '${{ steps.version_step.outputs.output }}' | jq -r '.SemVer')
+          echo "Updating package.json version to: $VERSION"
+          # # Use Node.js to update the version field in package.json
+          # node -e "let pkg = require('./package.json'); pkg.version = '$VERSION'; require('fs').writeFileSync('package.json', JSON.stringify(pkg, null, 2));"
