--- a/.github/workflows/auto-versioning.yaml
+++ b/.github/workflows/auto-versioning.yaml
@@ -30,4 +30,9 @@ jobs:
       - name: Update package.json Version
         run: |
           # Extract fullSemVer from GitVersion JSON output
-          echo "${{ steps.version_step.outputs.fullSemVer }}"
+          VERSION=$(echo "${{ steps.version_step.outputs.SemVer }}")
+          echo "Updating package.json version to: $VERSION"
+          # Update package.json using jq
+          cd frontend
+          jq --arg ver "$VERSION" '.version = $ver' package.json > package.tmp.json && mv package.tmp.json package.json
+          cat package.json
