--- a/.github/workflows/auto-versioning.yaml
+++ b/.github/workflows/auto-versioning.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v3.1.11
         with:
-          versionSpec: "6.0.x"
+          versionSpec: "6.0.0"
 
       - name: Determine Version
         id: version_step # step id used as reference for output values
@@ -28,10 +28,11 @@ jobs:
           useConfigFile: true
 
       - name: Show GitVersion Config
-        id: show_config
-        uses: gittools/actions/gitversion/execute@v3.1.11
-        with:
-          arguments: "/showconfig"
+        run: |
+          pwd
+          cd /opt/hostedtoolcache/GitVersion.Tool/6.0.0
+          pwd
+          ls
 
       - name: Update package.json Version
         run: |
