--- a/.github/workflows/auto-versioning.yaml
+++ b/.github/workflows/auto-versioning.yaml
@@ -30,10 +30,7 @@ jobs:
       - name: Show GitVersion Config
         run: |
           pwd
-          cd /opt/hostedtoolcache/GitVersion.Tool/6.0.0/dotnet-gitversion
-          pwd
-          ls
-          tree
+          /opt/hostedtoolcache/GitVersion.Tool/6.0.0/dotnet-gitversion /showconfig
 
       - name: Update package.json Version
         run: |
