--- a/.github/workflows/auto-versioning.yaml
+++ b/.github/workflows/auto-versioning.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v3.1.11
         with:
-          versionSpec: "6.0.0"
+          versionSpec: "6.0.x"
 
       - name: Determine Version
         id: version_step # step id used as reference for output values
@@ -30,7 +30,7 @@ jobs:
       - name: Show GitVersion Config
         run: |
           pwd
-          /opt/hostedtoolcache/GitVersion.Tool/6.0.0/dotnet-gitversion /showconfig
+          ls /opt/hostedtoolcache/GitVersion.Tool
 
       - name: Update package.json Version
         run: |
